<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Bakumon. https://github.com/Bakumon
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.bakumon.moneykeeper.ui.assets.add.AddAssetsActivity">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/layout_tool_bar" />

    <LinearLayout
        android:id="@+id/llType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/ivType"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            tools:src="@mipmap/assets_alipay" />

        <EditText
            android:id="@+id/edtTypeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_assets_name"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ivTypeRight"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:src="@drawable/ic_arrow_right"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:singleLine="true"
            android:text="@string/text_remark"
            android:textColor="@color/colorTextHint"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtRemark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/bg_item"
            android:hint="@string/hint_remark"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:singleLine="true"
            android:text="@string/text_balance"
            android:textColor="@color/colorTextHint"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/bg_item"
            android:hint="@string/hint_balance"
            android:inputType="numberSigned|numberDecimal"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>