<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Bakumon. https://github.com/Bakumon
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.bakumon.moneykeeper.ui.assets.AssetsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        android:paddingBottom="10dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_close" />

        <LinearLayout
            android:id="@+id/llRightContent"
            style="@style/Head.Content.Click"
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tvNetAssetsTitle"
                style="@style/Head.Title"
                android:text="@string/text_assets" />

            <TextView
                android:id="@+id/tvNetAssetsMoney"
                style="@style/Head.Money"
                android:text="0"
                tools:ignore="HardcodedText"
                tools:text="10,000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="0dp"
                android:paddingTop="0dp">

                <TextView
                    android:id="@+id/tvAllAssetsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_assets_all"
                    android:textColor="@color/colorHeadTextTitle" />

                <TextView
                    android:id="@+id/tvAllAssetsMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="0"
                    android:textColor="@color/colorHeadTextContent"
                    android:textSize="15sp"
                    tools:ignore="HardcodedText"
                    tools:text="10,000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="0dp"
                android:paddingTop="0dp">

                <TextView
                    android:id="@+id/tvLiabilitiesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_assets_liabilities"
                    android:textColor="@color/colorHeadTextTitle" />

                <TextView
                    android:id="@+id/tvLiabilitiesMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="0"
                    android:textColor="@color/colorHeadTextContent"
                    android:textSize="15sp"
                    tools:ignore="HardcodedText"
                    tools:text="10,000" />
            </LinearLayout>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:textColor="@color/colorTextSettingItemContent"
                android:textSize="15sp"
                tools:text="记账" />

            <include
                android:id="@+id/sortTip"
                layout="@layout/layout_sort_tip" />

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_donate"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="4dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="4dp"
                android:text="@string/text_done"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvAssets"
            style="@style/LinearRecyclerView"
            android:clipToPadding="false"
            android:paddingBottom="90dp"
            tools:listitem="@layout/item_assets" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAdd"
        style="@style/AddFAB"
        app:srcCompat="@drawable/ic_transfer" />
</android.support.design.widget.CoordinatorLayout>